--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ env:
   ENGELBERG_CONTENTFUL_ACCESS_TOKEN: ${{ secrets.ENGELBERG_CONTENTFUL_ACCESS_TOKEN }}
 jobs:
   pull-build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         ruby-version: [3.1.2]
