--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title:
 email:
 description: > # this means to ignore newlines until "baseurl:"
 
-baseurl: # the subpath of your site, e.g. /blog
+baseurl: '' # the subpath of your site, e.g. /blog
 url: "https://nyuengelberg.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
@@ -67,7 +67,6 @@ contentful:
         space: ENV_ENGELBERG_CONTENTFUL_SPACE_ID
         access_token: ENV_ENGELBERG_CONTENTFUL_ACCESS_TOKEN
         base_path: ./source
-        environment: test
         destination: /contentful
         all_entries: true
         cda_query:
@@ -79,7 +78,6 @@ contentful:
         space: ENV_ENGELBERG_CONTENTFUL_SPACE_ID
         access_token: ENV_ENGELBERG_CONTENTFUL_ACCESS_TOKEN
         base_path: ./source
-        environment: test
         destination: /contentful
         all_entries: true
         cda_query:
